Link chat front with back